# AlgeLab-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pos.ipynb  pyproject.toml  requirements.txt
.github/workflows/: feature-frontend-basics-django_poc-st.yml  main_algelab-django.yml  main_orquestador-api.yml
algelab/: manage.py  settings.py  urls.py  wsgi.py
algelab/algelab/: asgi.py  settings.py  urls.py
algelab/algelabApp/: apps.py  urls.py  views.py
algelab/settings/: __init__.py  development.py  production.py
algelabApp/: __init__.py  apps.py  authentication.py  middleware.py  models.py  urls.py  views.py
algelabApp/migrations/: 0001_initial.py  0002_remove_profile_avatar_url_profile_github_username.py
docs/: database.md  deployment.md  env_vars.md  github_auth.md
src/: exceptions.py  main.py
src/api/: auth.py  routes.py  users.py
src/auth/: exceptions.py  github.py  jwt.py  middleware.py
src/config/: __init__.py  base.py  constants.py  dev.py  logging.py  middleware.py  prod.py
src/db/: client.py  exceptions.py
src/schemas/: models.py
utils/: __init__.py
