[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algelab-backend"
version = "0.1.0"
description = "Backend for AlgeLab, an open-source web platform for enhancing linear algebra learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mauro Bonilla", email = "mauro.bonillaol@anahuac.mx"}
]
maintainers = [
    {name = "Mauro Bonilla", email = "mauro.bonillaol@anahuac.mx"}
]
keywords = ["education", "linear algebra", "virtual laboratory", "django", "rest api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "asgiref==3.8.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "cryptography==41.0.7",
    "Django==4.2.16",
    "django-cors-headers==3.14.0",
    "django-environ==0.10.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-yasg==1.21.7",
    "idna==3.10",
    "inflection==0.5.1",
    "packaging==24.1",
    "pycparser==2.22",
    "PyJWT==2.9.0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "sqlparse==0.5.1",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "gunicorn",
    "psycopg",
    "psycopg2",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-django",
    "pytest-cov",
]

production = [
    "sentry-sdk",
]

[project.urls]
"Homepage" = "https://github.com/Mauro-Bonilla/AlgeLab-backend"
"Documentation" = "https://github.com/Mauro-Bonilla/AlgeLab-backend/tree/main/docs"
"Bug Tracker" = "https://github.com/Mauro-Bonilla/AlgeLab-backend/issues"
"Discord" = "https://discord.gg/algelab"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "algelab.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]